<resources>
    <string name="app_name">TigerEatApp</string>
    <string name="login">登入</string>
    <string name="enter_account">輸入電子郵件</string>
    <string name="enter_password">輸入密碼</string>
    <string name="costomer_regist">使用者註冊</string>
    <string name="confirm_password">確認密碼</string>
    <string name="using_google_login">使用Google註冊</string>
    <string name="using_facebook_login">使用Facebook註冊</string>
    <string name="regist">註冊</string>
</resources>