<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".CostomerRegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle_shadow"
        android:orientation="vertical"
        android:paddingLeft="17dp"
        android:paddingTop="19dp"
        android:paddingRight="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCostomerRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/costomer_regist"
            android:textColor="@color/gray_dark"
            android:textSize="18dp" />

        <View
            android:layout_width="245sp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray_mid" />

        <EditText
            android:id="@+id/etCostomerRegistAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/gray_light"
            android:ems="10"
            android:hint="@string/enter_account"
            android:inputType="textWebEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/gray_light" />

        <EditText
            android:id="@+id/etCostomerRegistPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/gray_light"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/gray_light" />

        <EditText
            android:id="@+id/etCostomerRegistConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/gray_light"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/gray_light" />

        <EditText
            android:id="@+id/etCostomerRegistPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/gray_light"
            android:ems="10"
            android:hint="輸入電話"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/gray_light" />

        <EditText
            android:id="@+id/etCostomerRegistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="39dp"
            android:layout_marginRight="39dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/gray_light"
            android:ems="10"
            android:hint="輸入姓名"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/gray_light" />

        <Button
            android:id="@+id/btnCostomerRegist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/roboto_bold"
            android:onClick="onRegister"
            android:text="@string/regist"
            android:textColor="@color/brown_dark"
            android:textSize="18dp"
            app:strokeColor="@color/brown_light"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCostomerRegistGoogle"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/roboto_bold"
                android:onClick="Login"
                android:text="@string/using_google_login"
                android:textColor="@color/brown_dark"
                android:textSize="11sp"
                app:strokeColor="@color/brown_light"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnCostomerRegistFacebook"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/roboto_bold"
                android:onClick="Login"
                android:text="@string/using_facebook_login"
                android:textColor="@color/brown_dark"
                android:textSize="11sp"
                app:strokeColor="@color/brown_light"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>